--- a/homepage/index.html
+++ b/homepage/index.html
@@ -2,6 +2,10 @@
 		<meta charset="utf-8">
 		<title>evooluu</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Open Graph -->
+		<meta property="og:title" content="evooluu" />
+		<meta property="og:description" content="Donner confiance aux chercheurs d'emploi." />
+		<meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C4E0BAQGlbbEwjzC6Sw/company-logo_200_200/0/1610678289037?e=1649894400&v=beta&t=X4caI6VMZ52_hvVNlNq2_xMX2L4xbMcq4nUwmvP4BeM" />
 		<!-- <link rel="icon" href="i/favicon.png" type="image/x-icon"> -->
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Barlow:100,200,300,400,600,500,700,800,900|Barlow:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -182,37 +186,37 @@
 					</div>
 				</div>
 				<div class="row justify-content-center">
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_1.png" srcset="i/content_31_logo_1@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_2.png" srcset="i/content_31_logo_2@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_3.png" srcset="i/content_31_logo_3@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_4.png" srcset="i/content_31_logo_4@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_5.png" srcset="i/content_31_logo_5@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_6.png" srcset="i/content_31_logo_6@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-5 col-sm-6">
+					<!-- <div class="col-lg-3 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_7.png" srcset="i/content_31_logo_7@2x.png 2x" alt="" class="img-fluid">
 						</div>
@@ -221,7 +225,7 @@
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_8.png" srcset="i/content_31_logo_8@2x.png 2x" alt="" class="img-fluid">
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
@@ -231,16 +235,63 @@
 			<div class="container px-xl-0">
 				<div class="row text-center">
 					<div class="col-sm-4">
-						<img src="i/content_23_img_1.jpg" srcset="i/content_23_img_1@2x.jpg 2x" alt="" class="img-fluid radius10 mb-30">
-						<img src="i/content_23_img_2.jpg" srcset="i/content_23_img_2@2x.jpg 2x" alt="" class="img-fluid radius10 mb-30">
+						<div class="card radius10 mb-30">
+						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
+						    <p class="card-text">Full-stack Developer</p>
+						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						  </div>
+						</div>
+						<div class="card radius10 mb-30">
+						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
+						    <p class="card-text">Full-stack Developer</p>
+						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						  </div>
+						</div>
 					</div>
 					<div class="col-sm-4">
-						<img src="i/content_23_img_3.jpg" srcset="i/content_23_img_3@2x.jpg 2x" alt="" class="img-fluid radius10 mb-30">
-						<img src="i/content_23_img_4.jpg" srcset="i/content_23_img_4@2x.jpg 2x" alt="" class="img-fluid radius10 mb-30">
-					</div>
-					<div class="col-sm-4">
-						<img src="i/content_23_img_5.jpg" srcset="i/content_23_img_5@2x.jpg 2x" alt="" class="img-fluid radius10 mb-30">
-						<img src="i/content_23_img_6.jpg" srcset="i/content_23_img_6@2x.jpg 2x" alt="" class="img-fluid radius10">
+						<div class="card radius10 mb-30">
+						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
+						    <p class="card-text">Full-stack Developer</p>
+						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						  </div>
+						</div>
+						<div class="card radius10 mb-30">
+						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
+						    <p class="card-text">Full-stack Developer</p>
+						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						  </div>
+						</div>
+					</div><div class="col-sm-4">
+						<div class="card radius10 mb-30">
+						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
+						    <p class="card-text">Full-stack Developer</p>
+						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						  </div>
+						</div>
+						<div class="card radius10 mb-30">
+						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
+						    <p class="card-text">Full-stack Developer</p>
+						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						  </div>
+						</div>
 					</div>
 				</div>
 			</div>
