--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<div class="mt-20 mw-500 color-heading f-18 medium op-7 text-adaptive">					<div>Prépare et passe des entretiens professionnels fictifs à la demande. Reçois des feedbacks constructifs d'experts de ton secteur d'activité</div>
 					</div>
 					<div class="mt-70 d-block d-sm-flex flex-wrap justify-content-center justify-content-md-start buttons">
-						<a href="https://calendly.com/preparonstonentretien/15min" class="btn lg action-1">Programmer un entretien</a>
+						<a href="#experts" class="btn lg action-1">Programmer un entretien</a>
 						<!-- <a href="#" class="btn ml-10 lg border-gray color-main">Connexion</a> -->
 					</div>
 					<!-- <div class="mt-20 color-heading text-adaptive">En vous connectant vous acceptez nos<a href="#" class="link color-heading">Conditions générales</a>
@@ -231,64 +231,41 @@
 		</section>
 
 		<!-- Content 23 -->
-		<section class="pt-100 pb-70 bg-light content_23" >
+		<section id="experts" class="pt-100 pb-70 bg-light content_23" >
 			<div class="container px-xl-0">
 				<div class="row text-center">
 					<div class="col-sm-4">
 						<div class="card radius10 mb-30">
-						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <img src="https://media-exp1.licdn.com/dms/image/C5603AQFZYITN_kfnZw/profile-displayphoto-shrink_200_200/0/1630923343321?e=1647475200&v=beta&t=NXJ2td4vHCE5zBRW-_HcWHCjS12hLXPVJcuR-g66KYo" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
-						    <p class="card-text">Full-stack Developer</p>
-						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
-						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
-						  </div>
-						</div>
-						<div class="card radius10 mb-30">
-						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
-						  <div class="card-body">
-						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
-						    <p class="card-text">Full-stack Developer</p>
-						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <h5 class="card-title">Yohann CURT</h5>
+						    <p class="card-text">Associé gérant</p>
+						    <p class="card-text">Secteur: Équipements industriels</p>
+						    <p class="card-text">Disponibilité: Lundi le 17 janvier à 18:30</p>
 						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="card radius10 mb-30">
-						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <img src="https://media-exp1.licdn.com/dms/image/C4D03AQE61tH_4LZ7Gw/profile-displayphoto-shrink_200_200/0/1576142992869?e=1647475200&v=beta&t=DVRkySHZmDYCFDO-gOkD6qCbRoPDMtv_19VK8-ue0xA" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
-						    <p class="card-text">Full-stack Developer</p>
-						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						  	<h5 class="card-title">Lise (Norris) Chaput Ezvan</h5>
+						    <p class="card-text">Sales Director</p>
+						    <p class="card-text">Secteur: logiciel industriels, Industrie4.0</p>
+						    <p class="card-text">Disponibilité: Lundi le 17 janvier à 18:30</p>
 						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card radius10 mb-30">
-						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
+						  <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFCMqYSF1xLsw/profile-displayphoto-shrink_200_200/0/1628864726404?e=1647475200&v=beta&t=uONCaeZ3prMbXOq4rTa8oOwk6I_sIy-N_DCOT1ulyxw" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
-						    <p class="card-text">Full-stack Developer</p>
-						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
-						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
-						  </div>
-						</div>
-					</div><div class="col-sm-4">
-						<div class="card radius10 mb-30">
-						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
-						  <div class="card-body">
-						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
-						    <p class="card-text">Full-stack Developer</p>
-						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
-						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
-						  </div>
-						</div>
-						<div class="card radius10 mb-30">
-						  <img src="i/content_23_img_5.jpg" class="card-img-top" alt="...">
-						  <div class="card-body">
-						    <h5 class="card-title">Stéphane ZÉ-OGIER</h5>
-						    <p class="card-text">Full-stack Developer</p>
-						    <p class="card-text">Lundi le 17 janvier à 18:30</p>
+						    <h5 class="card-title">Pierre PREVELLE</h5>
+						    <p class="card-text">Technical Lead</p>
+						    <p class="card-text">Secteur: Ingénieurie informatique</p>
+						    <p class="card-text">Disponibilité: Lundi le 17 janvier à 18:30</p>
 						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
