--- a/index.html
+++ b/index.html
@@ -236,31 +236,31 @@
 				<div class="row text-center">
 					<div class="col-sm-4">
 						<div class="card radius10 mb-30">
-						  <img src="https://media-exp1.licdn.com/dms/image/C5603AQFZYITN_kfnZw/profile-displayphoto-shrink_200_200/0/1630923343321?e=1647475200&v=beta&t=NXJ2td4vHCE5zBRW-_HcWHCjS12hLXPVJcuR-g66KYo" class="card-img-top" alt="...">
+						  <!-- <img src="https://media-exp1.licdn.com/dms/image/C5603AQFZYITN_kfnZw/profile-displayphoto-shrink_200_200/0/1630923343321?e=1647475200&v=beta&t=NXJ2td4vHCE5zBRW-_HcWHCjS12hLXPVJcuR-g66KYo" class="card-img-top" alt="..."> -->
 						  <div class="card-body">
 						    <h5 class="card-title">Yohann CURT</h5>
 						    <p class="card-text">Associé gérant</p>
 						    <p class="card-text">Secteur: Équipements industriels</p>
-						    <p class="card-text">Disponibilité: Lundi le 17 janvier à 18:30</p>
+						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 15:00</p>
 						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="card radius10 mb-30">
-						  <img src="https://media-exp1.licdn.com/dms/image/C4D03AQE61tH_4LZ7Gw/profile-displayphoto-shrink_200_200/0/1576142992869?e=1647475200&v=beta&t=DVRkySHZmDYCFDO-gOkD6qCbRoPDMtv_19VK8-ue0xA" class="card-img-top" alt="...">
+						  <!-- <img src="https://media-exp1.licdn.com/dms/image/C4D03AQE61tH_4LZ7Gw/profile-displayphoto-shrink_200_200/0/1576142992869?e=1647475200&v=beta&t=DVRkySHZmDYCFDO-gOkD6qCbRoPDMtv_19VK8-ue0xA" class="card-img-top" alt="..."> -->
 						  <div class="card-body">
 						  	<h5 class="card-title">Lise (Norris) Chaput Ezvan</h5>
 						    <p class="card-text">Sales Director</p>
 						    <p class="card-text">Secteur: logiciel industriels, Industrie4.0</p>
-						    <p class="card-text">Disponibilité: Lundi le 17 janvier à 18:30</p>
+						    <p class="card-text">Disponibilité: Mercredi le 19 janvier 2022 à 18:00</p>
 						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="card radius10 mb-30">
-						  <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFCMqYSF1xLsw/profile-displayphoto-shrink_200_200/0/1628864726404?e=1647475200&v=beta&t=uONCaeZ3prMbXOq4rTa8oOwk6I_sIy-N_DCOT1ulyxw" class="card-img-top" alt="...">
+						  <!-- <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFCMqYSF1xLsw/profile-displayphoto-shrink_200_200/0/1628864726404?e=1647475200&v=beta&t=uONCaeZ3prMbXOq4rTa8oOwk6I_sIy-N_DCOT1ulyxw" class="card-img-top" alt="..."> -->
 						  <div class="card-body">
 						    <h5 class="card-title">Pierre PREVELLE</h5>
 						    <p class="card-text">Technical Lead</p>
