add eventbrite links

--- a/index.html
+++ b/index.html
@@ -182,26 +182,26 @@
 				<div class="row justify-content-center">
 					<h2 class="small col-lg-8">D'où viennent nos experts?</h2>
 					<div class="col-lg-8 mt-25 mb-55 f-18 medium op-7 text-adaptive">					
-						<div>Des professionnels expérimentés qui prennent le temps de donner confiance aux jeunes</div>
+						<div>Des professionnels expérimentés qui prennent le temps de (re)donner confiance aux jeunes</div>
 					</div>
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-lg-4 col-md-5 col-sm-6">
-						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
-							<img src="i/content_31_logo_1.png" srcset="i/content_31_logo_1@2x.png 2x" alt="" class="img-fluid">
+						<div class="bg-white mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
+							<img src="https://imageprocessor.digital.vistaprint.com/crop/131,107,1047x388/maxWidth/1000/https://uploads.documents.cimpress.io/v1/uploads/91c32dfe-f6c7-4ee7-b5bb-af289e6ccc1b~110/original?tenant=vbu-digital" srcset="i/content_31_logo_1@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
-							<img src="i/content_31_logo_2.png" srcset="i/content_31_logo_2@2x.png 2x" alt="" class="img-fluid">
+							<img src="https://www.qad.com/o/qad-theme/images/logo_letters_QAD.svg" srcset="i/content_31_logo_2@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-6">
-						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
-							<img src="i/content_31_logo_3.png" srcset="i/content_31_logo_3@2x.png 2x" alt="" class="img-fluid">
+						<div class="bg-white mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
+							<img src="https://www.spectraltms.com/hubfs/logo-Spectral-TMS-horizontal.svg" srcset="i/content_31_logo_3@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-5 col-sm-6">
+					<!-- <div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_4.png" srcset="i/content_31_logo_4@2x.png 2x" alt="" class="img-fluid">
 						</div>
@@ -216,7 +216,7 @@
 							<img src="i/content_31_logo_6.png" srcset="i/content_31_logo_6@2x.png 2x" alt="" class="img-fluid">
 						</div>
 					</div>
-					<!-- <div class="col-lg-3 col-md-5 col-sm-6">
+					<div class="col-lg-3 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
 							<img src="i/content_31_logo_7.png" srcset="i/content_31_logo_7@2x.png 2x" alt="" class="img-fluid">
 						</div>
@@ -242,7 +242,7 @@
 						    <p class="card-text">Associé gérant</p>
 						    <p class="card-text">Secteur: Équipements industriels</p>
 						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 15:00</p>
-						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						    <a href="https://www.eventbrite.co/e/245784005577" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
 					</div>
@@ -253,8 +253,8 @@
 						  	<h5 class="card-title">Lise (Norris) Chaput Ezvan</h5>
 						    <p class="card-text">Sales Director</p>
 						    <p class="card-text">Secteur: logiciel industriels, Industrie4.0</p>
-						    <p class="card-text">Disponibilité: Mercredi le 19 janvier 2022 à 18:00</p>
-						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 18:00</p>
+						    <a href="https://www.eventbrite.co/e/245792280327" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
 					</div>
@@ -265,8 +265,8 @@
 						    <h5 class="card-title">Pierre PREVELLE</h5>
 						    <p class="card-text">Technical Lead</p>
 						    <p class="card-text">Secteur: Ingénieurie informatique</p>
-						    <p class="card-text">Disponibilité: Lundi le 17 janvier à 18:30</p>
-						    <a href="#" class="btn btn-primary">Prendre rendez-vous</a>
+						    <p class="card-text">Disponibilité: Lundi 17 janvier à 18:30</p>
+						    <a href="https://www.eventbrite.co/e/245795670467" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
 					</div>
@@ -338,6 +338,7 @@
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
 			<div class="message">An error occurred while sending data :( Please, check if your hosting supports PHP and check how to set form data sending <a href="https://designmodo.com/startup/documentation/#form-handler" target="_blank" class="link color-transparent-white">here</a>.</div>
 		</div>
+
 
 		<!-- gReCaptcha popup (uncomment if you need a recaptcha integration) -->
 		<!--
