--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 						    <h5 class="card-title">Yohann CURT</h5>
 						    <p class="card-text">Associé gérant</p>
 						    <p class="card-text">Secteur: Équipements industriels</p>
-						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 15:00</p>
+						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 15:30</p>
 						    <a href="https://www.eventbrite.co/e/245784005577" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
@@ -253,7 +253,7 @@
 						  	<h5 class="card-title">Lise (Norris) Chaput Ezvan</h5>
 						    <p class="card-text">Sales Director</p>
 						    <p class="card-text">Secteur: logiciel industriels, Industrie4.0</p>
-						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 18:00</p>
+						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 18:30</p>
 						    <a href="https://www.eventbrite.co/e/245792280327" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
@@ -265,7 +265,7 @@
 						    <h5 class="card-title">Pierre PREVELLE</h5>
 						    <p class="card-text">Technical Lead</p>
 						    <p class="card-text">Secteur: Ingénieurie informatique</p>
-						    <p class="card-text">Disponibilité: Lundi 17 janvier à 18:30</p>
+						    <p class="card-text">Disponibilité: à définir</p>
 						    <a href="https://www.eventbrite.co/e/245795670467" class="btn btn-primary">Prendre rendez-vous</a>
 						  </div>
 						</div>
