remove h to yohann

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 						<div class="card radius10 mb-30">
 						  <!-- <img src="https://media-exp1.licdn.com/dms/image/C5603AQFZYITN_kfnZw/profile-displayphoto-shrink_200_200/0/1630923343321?e=1647475200&v=beta&t=NXJ2td4vHCE5zBRW-_HcWHCjS12hLXPVJcuR-g66KYo" class="card-img-top" alt="..."> -->
 						  <div class="card-body">
-						    <h5 class="card-title">Yohann CURT</h5>
+						    <h5 class="card-title">Yoann CURT</h5>
 						    <p class="card-text">Associé gérant</p>
 						    <p class="card-text">Secteur: Équipements industriels</p>
 						    <p class="card-text">Disponibilité: Mercredi 19 janvier 2022 à 15:30</p>
