add image links for mobile

--- a/index.html
+++ b/index.html
@@ -188,17 +188,17 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="bg-white mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
-							<img src="https://imageprocessor.digital.vistaprint.com/crop/131,107,1047x388/maxWidth/1000/https://uploads.documents.cimpress.io/v1/uploads/91c32dfe-f6c7-4ee7-b5bb-af289e6ccc1b~110/original?tenant=vbu-digital" srcset="i/content_31_logo_1@2x.png 2x" alt="" class="img-fluid">
+							<img src="https://imageprocessor.digital.vistaprint.com/crop/131,107,1047x388/maxWidth/1000/https://uploads.documents.cimpress.io/v1/uploads/91c32dfe-f6c7-4ee7-b5bb-af289e6ccc1b~110/original?tenant=vbu-digital" srcset="https://imageprocessor.digital.vistaprint.com/crop/131,107,1047x388/maxWidth/1000/https://uploads.documents.cimpress.io/v1/uploads/91c32dfe-f6c7-4ee7-b5bb-af289e6ccc1b~110/original?tenant=vbu-digital 2x" alt="" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
-							<img src="https://www.qad.com/o/qad-theme/images/logo_letters_QAD.svg" srcset="i/content_31_logo_2@2x.png 2x" alt="" class="img-fluid">
+							<img src="https://www.qad.com/o/qad-theme/images/logo_letters_QAD.svg" srcset="https://www.qad.com/o/qad-theme/images/logo_letters_QAD.svg 2x" alt="" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-5 col-sm-6">
 						<div class="bg-white mx-auto mb-30 mw-270 h-160 d-flex justify-content-center align-items-center radius6 block">
-							<img src="https://www.spectraltms.com/hubfs/logo-Spectral-TMS-horizontal.svg" srcset="i/content_31_logo_3@2x.png 2x" alt="" class="img-fluid">
+							<img src="https://www.spectraltms.com/hubfs/logo-Spectral-TMS-horizontal.svg" srcset="https://www.spectraltms.com/hubfs/logo-Spectral-TMS-horizontal.svg 2x" alt="" class="img-fluid">
 						</div>
 					</div>
 					<!-- <div class="col-lg-4 col-md-5 col-sm-6">
