add s to moment

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					</div>
 					<div class="col-lg-7 col-md-10">
 						<h2>Vaincre l'anxiété</h2>
-						<div class="mt-15 f-22 text-adaptive">Dans une carrière professionnelle, les entretiens sont des moment cruciaux. Boostez votre confiance en soi et décrochez le job.  </div>
+						<div class="mt-15 f-22 text-adaptive">Dans une carrière professionnelle, les entretiens sont des moments cruciaux. Boostez votre confiance en soi et décrochez le job.  </div>
 					</div>
 				</div>
 			</div>
