--- a/index.html
+++ b/index.html
@@ -364,6 +364,16 @@
 		<script src="js/jquery.maskedinput.min.js"></script>
 		<!-- Startup 3 JS (Custom js for all blocks) -->
 		<script src="js/script.js"></script>
-	
+		<!-- integromat -->
+		<script>
+		  window.intercomSettings = {
+		    app_id: "zsm8rndd"
+		  };
+		</script>
+
+		<script>
+		// We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/zsm8rndd'
+		(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/zsm8rndd';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+		</script>
 
 </body></html>
