replace dans le recrutement by dans leur métier

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					</div>
 					<div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 pt-105 pb-80 inner">
 						<h2 class="mb-25 small">Practice makes perfect!</h2>
-						<div class="f-22 color-heading text-adaptive">Nos entretiens sont menés par des experts de plus de 9 années d'expérience en recrutement. Avec eux, vous augmentez vos chances de réussir votre entretien</div>
+						<div class="f-22 color-heading text-adaptive">Nos entretiens sont menés par des experts de plus de 9 années d'expérience dans leur métier. Avec eux, vous augmentez vos chances de réussir votre entretien</div>
 						<div class="mt-55 mb-70 hr h-2 bg-gray">
 						</div>
 						<div class="row" style="display: none;">
