--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<div>Prépare toi aux entretiens d'embauche avec des professionnels de ton secteur d'activité. Reçois d'eux des feedbacks constructifs pour t'améliorer</div>
 					</div>
 					<div class="mt-70 d-block d-sm-flex flex-wrap justify-content-center justify-content-md-start buttons">
-						<a href="https://calendly.com/preparonstonentretien/15min" class="btn lg action-1">Commençons</a>
+						<a href="https://share-eu1.hsforms.com/1cQVIIXLTSpWwYDEBZWWWzwf6y9w" class="btn lg action-1">Commençons</a>
 						<!-- <a href="#" class="btn ml-10 lg border-gray color-main">Se connecter</a> -->
 					</div>
 					<!-- <div class="mt-20 color-heading text-adaptive">En vous connectant vous acceptez nos<a href="#" class="link color-heading">Conditions générales</a>
@@ -312,7 +312,7 @@
 			  </div>
 			</div>
 			<div class="d-flex d-sm-flex flex-wrap justify-content-center justify-content-md-center buttons">
-				<a href="https://calendly.com/preparonstonentretien/15min" class="btn lg action-1">Commençons</a>
+				<a href="https://share-eu1.hsforms.com/1cQVIIXLTSpWwYDEBZWWWzwf6y9w" class="btn lg action-1">Commençons</a>
 				<!-- <a href="#" class="btn ml-10 lg border-gray color-main">Se connecter</a> -->
 			</div>
 		</div>
